OpenJMLTest/test/gitbug499/expected
test/gitbug499/Interval.java:43: error: Expected a declaration or a JML construct inside the JML annotation here
            //@ contains(i);
                ^
test/gitbug499/Interval.java:64: error: Incorrectly formed or terminated JML construct near here
        //@ !contains(i);
                     ^
test/gitbug499/Interval.java:65: error: illegal start of type
    }
    ^
test/gitbug499/Interval.java:67: error: class, interface, enum, or record expected
    public /*@ pure @*/ int size() {
                        ^
test/gitbug499/Interval.java:69: error: class, interface, enum, or record expected
    }
    ^
test/gitbug499/Interval.java:1: error: Interval is not abstract and does not override abstract method size() in IntSet
public class Interval implements IntSet {
       ^
Operation not performed because of parse or type errors
6 errors
